# aero_lang_system

./: .gitignore  Cargo.toml  README.md
aero-ast/: Cargo.toml
aero-ast/src/: lib.rs
aero-codegen/: Cargo.toml
aero-codegen/src/: lib.rs
aero-lexer/: Cargo.toml
aero-lexer/src/: lib.rs
aero-parser/: Cargo.toml
aero-parser/src/: lib.rs
aero-types/: Cargo.toml
aero-types/src/: lib.rs
aeroc/: Cargo.toml  README.md
aeroc/src/: main.rs
aeroc/src/commands/: build.rs  check.rs  fmt.rs  mod.rs  new.rs  run.rs  test.rs
avm-runtime/: Cargo.toml
avm-runtime/src/: lib.rs
docs/: README.md  agentic_orchestration.md  api_reference.md  architecture.md  design_principles.md  getting_started.md  glossary.md  hololang.md  language_identity.md  network_architecture.md  os_design.md  roadmap.md  systems_stack.md  whitepaper.md
