[workspace]
members = [
    "aeroc",
    "aero-lexer",
    "aero-parser",
    "aero-ast",
    "aero-types",
    "aero-codegen",
    "avm-runtime",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["AERO Research Consortium"]
repository = "https://github.com/somat3k/aero_lang_system"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
logos = "0.14"
codespan-reporting = "0.11"
