[package]
name = "aero-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Abstract Syntax Tree definitions for AERO language"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
