[package]
name = "aero-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Parser for AERO language"

[dependencies]
aero-lexer = { path = "../aero-lexer" }
aero-ast = { path = "../aero-ast" }
thiserror.workspace = true
